--- a/site-src/wizard/index.html
+++ b/site-src/wizard/index.html
@@ -31,11 +31,42 @@
   <section class="card">
     <h2>Gateway Profile</h2>
 
+    <h3 id="gateway">Gateway</h3>
+    <p class="section-intro">All controllers matched by this wizard include core support of Gateway. That includes many core features, including:</p>
+    <ul class="core-list">
+      <li>Specifying listeners on different ports and protocols</li>
+      <li>TLS configuration (protocol dependent)</li>
+      <li>Hostname matching (protocol dependent)</li>
+      <li>Configuring which Routes can be attached, including the ability to accept Routes from other namespaces</li>
+    </ul>
+    <p class="section-intro">If you'd like additional Gateway features, you can choose from the following list of extended (optional) features.</p>
+    <table class="features" id="gateway-features">
+      <thead><tr><th scope="col">Gateway</th><th scope="col">Requirement</th></tr></thead>
+      <tbody></tbody>
+    </table>
+
     <h3 id="httproute">HTTPRoute</h3>
-    <p class="conformance-intro">Extended features from the <a id="link-httproute"
-        href="https://gateway-api.sigs.k8s.io/implementations/v1.4/#httproute" target="_blank" rel="noopener">HTTPRoute
-        conformance table</a>. Core is implied (controllers must pass Core to appear).</p>
+    <p class="section-intro">Controllers that pass conformance tests for HTTPRoute are guaranteed to support the following features:</p>
+    <ol class="core-list">
+      <li>Traffic splitting with weighted backends</li>
+      <li>Safe cross-namespace references with ReferenceGrant</li>
+      <li>Request header modification</li>
+      <li>Exact and prefix path matching</li>
+      <li>Hostname matching</li>
+      <li>HTTP redirects</li>
+    </ol>
+    <table class="features" id="http-route-core">
+      <thead><tr><th scope="col">HTTPRoute</th><th scope="col">Requirement</th></tr></thead>
+      <tbody></tbody>
+    </table>
+    <p class="section-intro">You can choose additional extended features from the <a id="link-httproute" href="https://gateway-api.sigs.k8s.io/implementations/v1.4/#httproute" target="_blank" rel="noopener">HTTPRoute conformance table</a>.</p>
     <table class="features" id="http-route-features">
+      <tbody></tbody>
+    </table>
+
+    <h3 id="backend-tls">Backend TLS</h3>
+    <p class="section-intro">If you need TLS to backends, you can select the following extended features.</p>
+    <table class="features" id="backend-tls-features">
       <tbody></tbody>
     </table>
 
@@ -100,6 +131,8 @@
       });
     }
     if (document.body) setupFeatureDescPopup(); else document.addEventListener('DOMContentLoaded', setupFeatureDescPopup);
+    function setupCoreOptionMutualExclusion() {}
+    if (document.body) setupCoreOptionMutualExclusion(); else document.addEventListener('DOMContentLoaded', setupCoreOptionMutualExclusion);
     // When embedded in MkDocs iframe: tell parent our height so it can use one scroll.
     window.wizardResize = function() {
       if (window.parent !== window) {
